# ab12phylo

./: .gitattributes  LICENSE.md  MANIFEST.in  README.md  setup.cfg  setup.py
GUI/files/: gui.glade
GUI/gtk3/: align.py  blast.py  commons.py  files.py  gtk_blast.py  gtk_gbl.py  gtk_io.py  gtk_main.py  gtk_ml.py  gtk_msa.py  gtk_proj.py  gtk_qal.py  gtk_rgx.py  gtk_tree.py  infer.py  quality.py  regex.py  shared.py  static.py  trim.py
ab12phylo/: __init__.py  ab12phylo_app.py  ab12phylo_init.py  blast.py  cli.py  filter.py  gtk_app.py  gtk_base.py  gtk_blast.py  gtk_gbl.py  gtk_io.py  gtk_ml.py  gtk_msa.py  gtk_proj.py  gtk_qal.py  gtk_rgx.py  gtk_tree.py  i_o.py  its_io.py  main.py  msa.py  phylo.py  raxml.py  repo.py  shared.py  template.jinja
ab12phylo/cgi-bin/: ab12phylo.py
ab12phylo/config/: config.yaml  test_config.yaml
ab12phylo/files/: gui.glade
ab12phylo/templates/: template.Rmd.html.jinja  template.Rmd.html.jinja_notabs
ab12phylo/test_data/: ITS1F.fasta  file_set  sample_set
ab12phylo_cmd/: __init__.py  blast.py  cli.py  filter.py  i_o.py  main.py  ml.py  msa.py  phylo.py  raxml.py  template.jinja
ab12phylo_cmd/cgi-bin/: ab12phylo.py
ab12phylo_cmd/config/: config.yaml  test_config.yaml
ab12phylo_gui/: gtk_app.py  gtk_base.py  gtk_blast.py  gtk_gbl.py  gtk_io.py  gtk_main.py  gtk_ml.py  gtk_msa.py  gtk_proj.py  gtk_qal.py  gtk_rgx.py  gtk_tree.py  repo.py  shared.py  static.py
ab12phylo_gui/files/: gui.glade
docs/: RAXML.md
recipe/: ab1.yaml  env.yaml  gtk-env.yaml  meta.yaml  win-env.yaml  win.yaml
(+38 files in other folders)
