[metadata]
name = ab12phylo
version = 0.4.20-beta
author = Leo Kaindl
author_email = leo.kaindl@tum.de
date = 26 February 2021
status = Beta
license =  gpl-3.0
description = Integrated pipeline for ML phylogenetic inference from ABI trace and FASTA data
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/lkndl/ab12phylo
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
platforms = any
keywords =
    bioinformatics
    phylogenetics
    population genetics

[options]
packages =
    ab12phylo
    ab12phylo_cmd
install_requires =
    biopython
    pyyaml
    jinja2
    lxml
    xmltramp2
    toyplot
    toytree<=1.2.0
    numpy
    pandas
    matplotlib
    svgutils
    pillow
    requests
    importlib-metadata
    keyring
python_requires = >=3.6

package_dir =
    ab12phylo_cmd = ab12phylo_cmd
    ab12phylo = ab12phylo
include_package_data = True
zip_safe = True

[options.entry_points]
console_scripts =
    ab12phylo-cmd = ab12phylo_cmd.main:_main
    ab12phylo-visualize = ab12phylo_cmd.phylo:_visualize
    ab12phylo-view = ab12phylo_cmd.phylo:_view
    ab12phylo-add-xml = ab12phylo_cmd.blast:_add_xml
gui_scripts =
    ab12phylo = ab12phylo.gtk_app:main
